Don't update page history for form submission redirect

Many forms use a a 302 redirect on a successful post. The redirect chain
was causing the title and favicon of the redirect page to be set on the
original form as well. This prevents that from happening, but still
allows other redirects to set the old page title and favicon (e.g. when
a website redirects all GET requests to a new domain).

Bug: 882724
Change-Id: I9cc1a795637ea27ef90c19480a4eee8cf6f98602
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/2333748
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Stephen Sigwart <ssigwart@gmail.com>
Cr-Commit-Position: refs/heads/master@{#854355}